CSS/style.css
/* ... */
  .navbar-fixed {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: #0b3d59;
    z-index: 2;
    box-shadow:  0 5px 15px rgba(0, 0, 0, 0.1);
  }
.sidebar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background:#5A5B76;
    color:#1b9bff;
    z-index: 4;
    display: grid;
     align-items: center;
    justify-content: center; 
    place-items: center;
    -webkit-transition: var(--transition);
    transition: all ease 0.3s;
    /* add later */
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
}
.show-sidebar {
    -webkit-transform: translateX(0);
    transform: translateX(0);
}

.sidebar-links {
    text-align: center;
}

.sidebar-links a {
    font-size: 2rem;
    text-transform: capitalize;
    -webkit-transition: all 0.3s linear;
    transition: all 0.3s linear;
    color: #1b9bff;
    letter-spacing: 0.25rem;
    display: inline-block;
    margin-bottom: 1.5rem;
}
.sidebar-links a:hover {
    color: white;
}

.close-btn {
    position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 3rem;
  background: transparent;
  border: transparent;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  color: white;
  cursor: pointer;
}
.close-btn:hover{
    color: #1b9bff;
}




/*navbar*/

/*BODY SECTION*/
.body-section{
    padding: 15px;
    text-align: center;
    background-color: white;
}
.body-section .body-section-contents{
    width: 90%;
    margin: auto;
}
.body-section .about-text{
    padding-top: 10px;
    border-bottom: 1px solid #5A5B76;
}
.body-section .about-text h3{
    padding-bottom: 16px;
}
.body-section .about-text h1{
    padding-bottom: 16px;
    color:  #1b9bff;
    font-size: 48px;
}
.body-section .about-text p{
    line-height: 32px;
    font-size: 24px;
    width: 80%;
    margin: auto;
}
.about-ending{
    display: flex;
    text-align: center;
    margin-left: 24%;
}

.about-ending-item{
    margin: 20px;
    padding: 40px;
}
.about-ending-item a:hover{
    background-color: white;
}
.about-ending .about-ending-item img{
    height: 100px;
}
.about-ending .about-ending-item i{
    font-size: 100px;
}
.body-map-container{
    padding-bottom: 16px;
}
/*FOOTER*/

.footer{
    text-align: center;
    margin-bottom: 0px;
    background-color:  #0b3d59;
    height: fit-content;
}
.footer-links{
    display: flex;
    justify-content: space-around;
    width: 90%;
    margin: auto;
    text-align: center;
}
.footer-links .link-items{
    display: flex;
    flex-direction: column;
    padding-left: 32px;
    margin-left: 32px;
    color: white;
    margin-top: 8px;
}
.footer-links .link-items p{
    padding-bottom: 8px;
    text-transform: uppercase;
}
.footer-links .link-items a{
    color: white;
    padding: 0px;
    font-weight: lighter;
    line-height: 24px;
    text-align: start;
}

.footer-links .link-items a:hover{
    background-color: transparent;
}
.footer-content{
    padding-top: 32px;
}
.footer-content .footer-social{
    padding-bottom: 8px;
}
.footer-content .footer-social a{
    font-size: 24px;
    padding: 16px;
    color: white;
}
.footer-content .footer-social a:hover{
    background-color: transparent;
    text-decoration: none;
}
.footer-paragraph{
    color: white;
}
.footer-paragraph a{
    text-decoration: underline;
    color: white;
}
.footer-paragraph a:hover{
    background-color: transparent;
}
/*KENYA.HTML*/
.iaeste-kenya .home-image{
    background-image: url("../assets/about-image.jpeg");
    height: 70vh;
    width: 75%;
    margin: auto;
}
.iaeste-kenya p{
    margin: 32px 0px 20px 50px;
    font-size: 32px;
}
.committee-text{
    width: 90%;
    margin: auto;
}
.committee-text p{
    font-size: 16px;
    font-weight: 100;
    line-height: 24px;
}
.committee-text a{
    text-decoration: underline;
}
.committee-text a:hover{
    background-color: transparent;
}
.member-text{
    text-align: center;
    margin-top: 46px;
}
.member-text i{
    font-size: 48px;
}
.member-text i:hover{
    transform: rotate(180deg);
    transition: all 0.9s ease-in-out;
}

.container{
    width: 50%;
    margin: 10px auto;
  }
  .courasel{
    height: 200px;
    overflow: hidden;
  }
  .slider{
    display: flex;
    height: 100%;
    width: 400%;
    transition: all 0.9s;
  }
  .slider section{
    flex-basis: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .slider section a{
      display:  flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
  }
  .slider section p{
      font-size: 20px;
      font-weight: 900;
  }
  .slider section img{
      height: 150px;
  }
  .arrows{
    position: absolute;
    top: 150%; 
    cursor: pointer;
  }
  .arrows i{
      font-size: 54px;
  }
  .left{
    left: 10px;
    position: absolute;
  }
  .right{
    position: absolute;
    left: 535px;
  }
  /*MEMBERSHIP*/
  .membership{
      width: 90%;
      margin: auto;
      border-bottom: 1px solid #ccc;
      padding-top: 16px;
  }
  .membership .membership-text p{
      line-height: 28px;
      padding-bottom: 16px;
  }
  .membership .membership-text span{
      font-size: 16px;
      cursor: pointer;
  }
  .membership .membership-text a{
      text-decoration: underline;
  }

/*CONTACT*/
.contact{
    display: flex;
    width: 70%;
    margin: auto;
    padding-bottom: 24px;
}
.contact .container-paragraph{
    font-size: 22px;
}

.contact .container{
    margin: 4px;
    padding: 4px;
    margin-top: 44px;
}
.contact .container .container-item{
    display: flex;
    padding: 8px;
}
.contact .container-item i{
    padding-right: 8px;
    font-size: 18px;
}
.container .container-item span{
    font-size: 16px;
    font-weight: 700;
}
.container .container-item a{
    text-decoration: underline;
}
.container .container-item a:hover{
    background-color: white;
}

/*STUDENT-SECTION*/

.students-page{
    height: fit-content;
}
/* ... */

